--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,11 @@ html, body {
     margin-left: 10px; 
     margin-right: 10px; 
 }
-.content {
-    min-height: 100%;
-    box-sizing: border-box;
-    padding-bottom: 100px; 
-}
 
+.container {
+    flex: 1;
+    background-image: url(../img/FondoGris.webp);
+}
 footer {
     display: flex;
     justify-content: center;
@@ -61,10 +60,13 @@ footer {
 }
 .creative-commons {
     display: flex;
-    justify-content: end;
+    justify-content: center; 
     align-items: center;
-    flex-grow: 1;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
+
 
 .creative-commons img {
     margin: 0 5px; 
@@ -83,4 +85,62 @@ footer {
     margin: 0 5px; 
     width: 35px;
     height: 35px;
+}
+.sidebar {
+    width: 250px;
+    padding: 15px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar h2 {
+    margin-top: 0;
+    color: white;
+    text-align: left;
+}
+
+.sidebar a {
+    text-decoration: none;
+    color: white;
+    margin-left: 10px;
+}
+
+.sidebar img {
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+}
+
+.sidebar div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+
+
+.menu-toggle {
+    display: none;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        position: absolute;
+        left: -250px;
+        transition: left 0.3s;
+        height: 100vh;
+        width: 100%;
+    }
+
+    .sidebar.open {
+        left: 0;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
 }
